--- a/study-areas/src/components/Box.css
+++ b/study-areas/src/components/Box.css
@@ -5,7 +5,7 @@
         height: 200px;
         max-height: 35vh;
         -webkit-box-shadow: 0px 12px 18px -6px rgba(0,0,0,0.3);
-        box-shadow: 0px 12px 18px -6px rgba(0,0,0,0.3);
+        box-shadow: 0px 12px 18px -6px rgba(0, 0, 0, 0.3);
         margin: 20px;
 
     }
